--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="FACTOVA_Palletizing_Analysis.MainWindow"
+﻿<Window x:Class="FACTOVA_QueryHelper.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FACTOVA_Palletizing_Analysis"
+        xmlns:local="clr-namespace:FACTOVA_QueryHelper"
         mc:Ignorable="d"
-        Title="FACTOVA Palletizing Analysis" Height="700" Width="1200">
+        Title="FACTOVA Query Helper" Height="700" Width="1200">
     <Grid>
         <TabControl x:Name="MainTabControl" Margin="10">
             <!-- 로그분석 탭 -->
@@ -262,7 +262,7 @@
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="120"/>
                                         <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="120"/>
+                                        <ColumnDefinition Width="200"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
 
