--- a/Controls/SettingsControl.xaml
+++ b/Controls/SettingsControl.xaml
@@ -1,9 +1,8 @@
-<UserControl x:Class="FACTOVA_QueryHelper.Controls.SettingsControl"
+﻿<UserControl x:Class="FACTOVA_QueryHelper.Controls.SettingsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:FACTOVA_QueryHelper.Controls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="1200">
     <Grid Margin="20">
@@ -12,9 +11,9 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <GroupBox Header="TNS File Path Settings" Grid.Row="0" Padding="15">
+        <GroupBox Header="TNS 파일 경로 설정" Grid.Row="0" Padding="15">
             <StackPanel>
-                <TextBlock Text="tnsnames.ora file path" FontWeight="Bold" Margin="0,0,0,10"/>
+                <TextBlock Text="tnsnames.ora 파일 경로" FontWeight="Bold" Margin="0,0,0,10"/>
                 
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -30,13 +29,13 @@
                     
                     <Button x:Name="BrowseButton" 
                             Grid.Column="1"
-                            Content="Browse..." 
+                            Content="찾아보기..." 
                             Width="100" 
                             Height="30"
                             Click="BrowseButton_Click"/>
                 </Grid>
 
-                <TextBlock Text="Default path:" Margin="0,15,0,5" FontSize="11" Foreground="Gray"/>
+                <TextBlock Text="기본 경로:" Margin="0,15,0,5" FontSize="11" Foreground="Gray"/>
                 <TextBlock x:Name="DefaultPathTextBlock" 
                            FontSize="11" 
                            Foreground="Gray" 
@@ -44,13 +43,13 @@
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20,0,0">
                     <Button x:Name="ResetButton" 
-                            Content="Reset to Default" 
+                            Content="기본값 복원" 
                             Width="100" 
                             Height="30" 
                             Margin="0,0,10,0"
                             Click="ResetButton_Click"/>
                     <Button x:Name="SaveSettingsButton" 
-                            Content="Save Settings" 
+                            Content="설정 저장" 
                             Width="100" 
                             Height="30"
                             Background="#FF0078D7" 
