--- a/Controls/SfcMonitoringControl.xaml
+++ b/Controls/SfcMonitoringControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="FACTOVA_QueryHelper.Controls.SfcMonitoringControl"
+﻿<UserControl x:Class="FACTOVA_QueryHelper.Controls.SfcMonitoringControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,7 +17,7 @@
                   BorderBrush="#FF0078D7" 
                   BorderThickness="1">
             <Expander.Header>
-                <TextBlock Text="Monitoring Settings" 
+                <TextBlock Text="모니터링 설정 - 클릭하여 펼치기/접기" 
                            FontWeight="Bold" 
                            FontSize="13"
                            Foreground="#FF0078D7"/>
@@ -49,14 +49,16 @@
                         <TextBlock Text="TNS:" VerticalAlignment="Center" Grid.Column="0" Margin="0,0,10,0"/>
                         <ComboBox x:Name="SfcTnsComboBox" Grid.Column="1" Margin="5" VerticalAlignment="Center"/>
 
-                        <TextBlock Text="Query Date:" VerticalAlignment="Center" Grid.Column="2" Margin="20,0,10,0"/>
+                        <TextBlock Text="조회 날짜:" VerticalAlignment="Center" Grid.Column="2" Margin="20,0,10,0"/>
                         <DatePicker x:Name="ConfigDatePicker" Grid.Column="3" Margin="5" VerticalAlignment="Center"/>
 
                         <TextBlock Text="User ID:" VerticalAlignment="Center" Grid.Column="4" Margin="20,0,10,0"/>
-                        <TextBox x:Name="SfcUserIdTextBox" Grid.Column="5" Margin="5" VerticalAlignment="Center"/>
+                        <TextBox x:Name="SfcUserIdTextBox" Grid.Column="5" Margin="5" VerticalAlignment="Center"
+                                 ToolTip="Oracle 사용자 ID"/>
 
                         <TextBlock Text="Password:" VerticalAlignment="Center" Grid.Column="6" Margin="20,0,10,0"/>
-                        <PasswordBox x:Name="SfcPasswordBox" Grid.Column="7" Margin="5" VerticalAlignment="Center"/>
+                        <PasswordBox x:Name="SfcPasswordBox" Grid.Column="7" Margin="5" VerticalAlignment="Center"
+                                     ToolTip="Oracle 비밀번호"/>
                     </Grid>
 
                     <Grid Grid.Row="1" Margin="0,10,0,0">
@@ -66,8 +68,8 @@
                         </Grid.RowDefinitions>
                         
                         <DockPanel Grid.Row="0" Margin="0,0,0,5">
-                            <TextBlock Text="Query" FontWeight="Bold" Margin="0,0,10,0" VerticalAlignment="Center" DockPanel.Dock="Left"/>
-                            <Button x:Name="ResetSfcQueryButton" Content="Reset" 
+                            <TextBlock Text="쿼리" FontWeight="Bold" Margin="0,0,10,0" VerticalAlignment="Center" DockPanel.Dock="Left"/>
+                            <Button x:Name="ResetSfcQueryButton" Content="초기화" 
                                     Width="80" Height="25" 
                                     Click="ResetSfcQueryButton_Click"
                                     HorizontalAlignment="Right"
@@ -80,7 +82,8 @@
                                  AcceptsReturn="True"
                                  VerticalScrollBarVisibility="Auto"
                                  Height="80"
-                                 FontFamily="Consolas"/>
+                                 FontFamily="Consolas"
+                                 Text="SELECT * FROM TB_SFC_MAINFRAME_CONFIG_N A WHERE A.TRANSACTION_TYPE_CODE = 'LOGIN_AUTO' AND SFC_MODE = 'PROD' AND A.CONFIG_REGISTER_YMD = @CONFIG_REGISTER_YMD AND PC_IP_ADDR IN (@PC_IP_ADDR)"/>
                     </Grid>
 
                     <Grid Grid.Row="2" Margin="0,10,0,0">
@@ -92,20 +95,20 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Text="Excel File:" VerticalAlignment="Center" Grid.Column="0" Margin="0,0,10,0"/>
+                        <TextBlock Text="Excel 파일:" VerticalAlignment="Center" Grid.Column="0" Margin="0,0,10,0"/>
                         <TextBox x:Name="SfcExcelFilePathTextBox" Grid.Column="1" Margin="5" 
                                  IsReadOnly="True" VerticalAlignment="Center"/>
-                        <Button x:Name="BrowseSfcExcelButton" Grid.Column="2" Content="Browse..." 
+                        <Button x:Name="BrowseSfcExcelButton" Grid.Column="2" Content="찾아보기..." 
                                 Width="100" Height="30" Margin="5"
                                 Click="BrowseSfcExcelButton_Click"/>
-                        <Button x:Name="LoadSfcExcelButton" Grid.Column="3" Content="Load Excel" 
+                        <Button x:Name="LoadSfcExcelButton" Grid.Column="3" Content="Excel 로드" 
                                 Width="100" Height="30" Margin="5"
                                 Click="LoadSfcExcelButton_Click"
                                 Background="#FF0078D7" 
                                 Foreground="White"
                                 FontWeight="Bold"
                                 IsEnabled="False"/>
-                        <Button x:Name="ExecuteSfcQueryButton" Grid.Column="4" Content="Execute Query" 
+                        <Button x:Name="ExecuteSfcQueryButton" Grid.Column="4" Content="쿼리 조회" 
                                 Width="100" Height="30" Margin="5"
                                 Click="ExecuteSfcQueryButton_Click"
                                 Background="#FF28A745" 
@@ -117,7 +120,7 @@
             </Border>
         </Expander>
 
-        <GroupBox Header="Filtering" Grid.Row="1" Padding="10" Margin="0,0,0,10">
+        <GroupBox Header="필터링" Grid.Row="1" Padding="10" Margin="0,0,0,10">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -125,21 +128,24 @@
                 </Grid.RowDefinitions>
 
                 <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,5">
-                    <TextBlock Text="IP Address:" VerticalAlignment="Center" Width="80" Margin="0,0,5,0"/>
+                    <TextBlock Text="IP 주소:" VerticalAlignment="Center" Width="80" Margin="0,0,5,0"/>
                     <TextBox x:Name="FilterIpTextBox" Width="120" Margin="5" VerticalAlignment="Center"
-                             TextChanged="ApplyFilter"/>
+                             TextChanged="ApplyFilter"
+                             ToolTip="IP 주소로 필터링 (부분 일치)"/>
 
-                    <TextBlock Text="Equipment ID:" VerticalAlignment="Center" Width="80" Margin="20,0,5,0"/>
+                    <TextBlock Text="설비 ID:" VerticalAlignment="Center" Width="80" Margin="20,0,5,0"/>
                     <TextBox x:Name="FilterEquipmentIdTextBox" Width="120" Margin="5" VerticalAlignment="Center"
-                             TextChanged="ApplyFilter"/>
+                             TextChanged="ApplyFilter"
+                             ToolTip="설비 ID로 필터링 (부분 일치)"/>
 
-                    <TextBlock Text="Equipment Name:" VerticalAlignment="Center" Width="80" Margin="20,0,5,0"/>
+                    <TextBlock Text="설비명:" VerticalAlignment="Center" Width="80" Margin="20,0,5,0"/>
                     <TextBox x:Name="FilterEquipmentNameTextBox" Width="150" Margin="5" VerticalAlignment="Center"
-                             TextChanged="ApplyFilter"/>
+                             TextChanged="ApplyFilter"
+                             ToolTip="설비명으로 필터링 (부분 일치)"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Grid.Row="1">
-                    <TextBlock Text="Status:" VerticalAlignment="Center" Width="80" Margin="0,0,5,0"/>
+                    <TextBlock Text="상태:" VerticalAlignment="Center" Width="80" Margin="0,0,5,0"/>
                     <ComboBox x:Name="FilterStatusComboBox" Width="200" Margin="5" VerticalAlignment="Center"
                               IsEditable="True"
                               IsReadOnly="True"
@@ -169,7 +175,7 @@
                         </ComboBox.ItemTemplate>
                     </ComboBox>
 
-                    <Button x:Name="ClearFilterButton" Content="Clear Filter" 
+                    <Button x:Name="ClearFilterButton" Content="필터 초기화" 
                             Width="100" Height="25" Margin="20,0,0,0"
                             Click="ClearFilterButton_Click"/>
 
@@ -182,7 +188,7 @@
             </Grid>
         </GroupBox>
 
-        <GroupBox Header="Monitoring Results" Grid.Row="2" Padding="10">
+        <GroupBox Header="모니터링 결과" Grid.Row="2" Padding="10">
             <DataGrid x:Name="SfcMonitorDataGrid" 
                       AutoGenerateColumns="False" 
                       IsReadOnly="True"
@@ -190,10 +196,10 @@
                       AlternatingRowBackground="LightGray"
                       CanUserAddRows="False">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="IP Address" Binding="{Binding IpAddress}" Width="150"/>
-                    <DataGridTextColumn Header="Equipment ID" Binding="{Binding EquipmentId}" Width="150"/>
-                    <DataGridTextColumn Header="Equipment Name" Binding="{Binding EquipmentName}" Width="200"/>
-                    <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="100"/>
+                    <DataGridTextColumn Header="IP 주소" Binding="{Binding IpAddress}" Width="150"/>
+                    <DataGridTextColumn Header="설비 ID" Binding="{Binding EquipmentId}" Width="150"/>
+                    <DataGridTextColumn Header="설비명" Binding="{Binding EquipmentName}" Width="200"/>
+                    <DataGridTextColumn Header="상태" Binding="{Binding Status}" Width="100"/>
                     <DataGridTextColumn Header="BIZACTOR" Binding="{Binding BizActor}" Width="100">
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="TextBlock">
