--- a/Controls/LogAnalysisControl.xaml
+++ b/Controls/LogAnalysisControl.xaml
@@ -26,14 +26,32 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Text="Excel 파일:" VerticalAlignment="Center" Grid.Column="0" Margin="0,0,10,0"/>
                     <TextBox x:Name="ExcelFilePathTextBox" Grid.Column="1" Margin="5" 
                              IsReadOnly="True" VerticalAlignment="Center"/>
-                    <Button x:Name="BrowseExcelButton" Grid.Column="2" Content="찾아보기..." 
-                            Width="100" Height="30" Margin="5"
-                            Click="BrowseExcelButton_Click"/>
+                    <Button x:Name="BrowseExcelButton" Grid.Column="2" Content="📂 찾아보기..." 
+                            Width="110" Height="30" Margin="5"
+                            Click="BrowseExcelButton_Click"
+                            ToolTip="Excel 쿼리 파일 선택"/>
+                    <Button x:Name="LoadFromDbButton" Grid.Column="3" Content="💾 DB에서 로드" 
+                            Width="120" Height="30" Margin="5"
+                            Click="LoadFromDbButton_Click"
+                            Background="#FF28A745" 
+                            Foreground="White"
+                            FontWeight="Bold"
+                            ToolTip="데이터베이스에서 쿼리 목록 로드"/>
+                    <Button x:Name="SaveToDbButton" Grid.Column="4" Content="💿 DB에 저장" 
+                            Width="110" Height="30" Margin="5"
+                            Click="SaveToDbButton_Click"
+                            Background="#FF0078D7" 
+                            Foreground="White"
+                            FontWeight="Bold"
+                            IsEnabled="False"
+                            ToolTip="현재 Excel의 쿼리를 데이터베이스에 저장"/>
                 </Grid>
 
                 <Grid Grid.Row="1" Margin="0,10,0,0">
